CREDO SIA FINITO (?)

--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -54,7 +54,7 @@
                         <td>
                            
                             <img src="img/circle.png" class="imgp">
-                            <div class="candidi lista1">
+                            <div class="candidi lista1" name="1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -63,7 +63,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista1">
+                             <div class="candidi lista1" name="1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -73,7 +73,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista1">
+                             <div class="candidi lista1" name="1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -81,7 +81,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista1">
+                             <div class="candidi lista1" name="1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -95,7 +95,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista2">
+                             <div class="candidi lista2" name="2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -103,7 +103,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista2">
+                             <div class="candidi lista2" name="2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -113,7 +113,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista2">
+                             <div class="candidi lista2" name="2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -130,7 +130,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista3">
+                             <div class="candidi lista3" name="3">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -147,7 +147,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista4">
+                             <div class="candidi lista4" name="4">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -164,7 +164,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista5">
+                             <div class="candidi lista5" name="5">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -181,7 +181,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista6">
+                             <div class="candidi lista6" name="6">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -189,7 +189,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista6">
+                             <div class="candidi lista6" name="6">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -203,7 +203,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista7">
+                             <div class="candidi lista7" name="7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -211,7 +211,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista7">
+                             <div class="candidi lista7" name="7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -221,7 +221,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi lista7">
+                             <div class="candidi lista7" name="7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -229,7 +229,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                            <div class="candidi lista7">
+                            <div class="candidi lista7" name="7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
