--- a/profilo.html
+++ b/profilo.html
@@ -38,10 +38,11 @@
                     <h1 id="Nome">Nome Cognome</h1>
                     <h2 id="Cid">Carta ID: AX0000000</h2>
                     <h2 id="Mun">Municipio: XX</h2>
-                    <h2 id="Email">Email: xxxx@hhhh.com</h2>
+                    <h2 id="Email">E-mail: xxxx@hhhh.com</h2>
                     <script>buildProfileName()</script>
                     <script>buildProfileCid()</script>
                     <script>buildProfileMun()</script>
+                    <script>buildProfileEmail()</script>
                 </figcaption>
             </header>
                 <h1>News</h1>
