--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </header>
     <div id="main_page">
     <article>
-        <h1>Portale del votante</h1>
+        <h1>Vota online!</h1>
         <p>
-            Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare da casa.
-            Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a>.
+            Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare comodamente da casa.
+            Se &egrave la prima volta che visiti questo sito devi prima iscriverti <a href="registrati.html">qui</a>.
         </p>
     </article>
     <div id="login_area"> 
